parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> proc_compuesto
Rule 2     proc_compuesto -> set_proc
Rule 3     set_proc -> procedimiento set_proc
Rule 4     set_proc -> procedimiento
Rule 5     procedimiento -> funcion
Rule 6     bloq_ejecucion -> while
Rule 7     expresion -> def_variable expresion
Rule 8     expresion -> put expresion
Rule 9     expresion -> llamada_funcion expresion
Rule 10    expresion -> aritmeticas expresion
Rule 11    expresion -> logicas expresion
Rule 12    expresion -> movimiento expresion
Rule 13    expresion -> condicionales expresion
Rule 14    expresion -> for expresion
Rule 15    expresion -> while expresion
Rule 16    expresion -> empty
Rule 17    expresion_var -> ID
Rule 18    expresion_var -> NUMERO
Rule 19    expresion_var -> BOOL
Rule 20    expresion_var -> empty
Rule 21    expresion_param -> ID
Rule 22    expresion_param -> NUMERO
Rule 23    expresion_param -> BOOL
Rule 24    expresion_param -> aritmeticas
Rule 25    expresion_param -> logicas
Rule 26    expresion_param -> empty
Rule 27    expresion_op -> ID
Rule 28    expresion_op -> NUMERO
Rule 29    expresion_op -> aritmeticas
Rule 30    expresion_op -> empty
Rule 31    expresion_log -> ID
Rule 32    expresion_log -> NUMERO
Rule 33    expresion_log -> condicionales
Rule 34    expresion_log -> empty
Rule 35    def_variable -> DEF PARENTESIS_IZQ ID COMA expresion_var PARENTESIS_DER PUNTOCOMA
Rule 36    llamada_funcion -> ID PARENTESIS_IZQ parametros PARENTESIS_DER PUNTOCOMA
Rule 37    parametros -> expresion_param COMA parametros
Rule 38    parametros -> expresion_param
Rule 39    funcion -> PROC ID PARENTESIS_IZQ parametros PARENTESIS_DER PARENTESISC_IZQ expresion PARENTESISC_DER PUNTOCOMA END PUNTOCOMA
Rule 40    aritmeticas -> ADD PARENTESIS_IZQ ID COMA expresion_op PARENTESIS_DER PUNTOCOMA
Rule 41    aritmeticas -> DIV PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
Rule 42    aritmeticas -> MULT PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
Rule 43    aritmeticas -> SUM PARENTESIS_IZQ expresion_op COMA expresion PARENTESIS_DER PUNTOCOMA
Rule 44    aritmeticas -> SUBSTR PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
Rule 45    aritmeticas -> random
Rule 46    logicas -> AND PARENTESIS_IZQ expresion_log COMA expresion_log PARENTESIS_DER PUNTOCOMA
Rule 47    logicas -> OR PARENTESIS_IZQ expresion_log COMA expresion_log PARENTESIS_DER PUNTOCOMA
Rule 48    condicionales -> GREATER PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
Rule 49    condicionales -> SMALLER PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
Rule 50    condicionales -> EQUAL PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
Rule 51    movimiento -> continueUp
Rule 52    movimiento -> continueDown
Rule 53    movimiento -> continueRight
Rule 54    movimiento -> continueLeft
Rule 55    movimiento -> pos
Rule 56    movimiento -> posAxis
Rule 57    movimiento -> useColor
Rule 58    movimiento -> elevation
Rule 59    movimiento -> beginning
Rule 60    continueUp -> CONTINUEUP expresion_op PUNTOCOMA
Rule 61    continueDown -> CONTINUEDOWN expresion_op PUNTOCOMA
Rule 62    continueRight -> CONTINUERIGHT expresion_op PUNTOCOMA
Rule 63    continueLeft -> CONTINUELEFT expresion_op PUNTOCOMA
Rule 64    pos -> POS PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
Rule 65    posAxis -> POSX expresion_op PUNTOCOMA
Rule 66    posAxis -> POSY expresion_op PUNTOCOMA
Rule 67    useColor -> USECOLOR expresion_op PUNTOCOMA
Rule 68    elevation -> UP PUNTOCOMA
Rule 69    elevation -> DOWN PUNTOCOMA
Rule 70    beginning -> BEGINNING PUNTOCOMA
Rule 71    put -> PUT PARENTESIS_IZQ ID COMA expresion_param PARENTESIS_DER PUNTOCOMA
Rule 72    random -> RANDOM PARENTESIS_IZQ expresion_op PARENTESIS_DER PUNTOCOMA
Rule 73    while -> WHILE PARENTESISC_IZQ condicionales PARENTESISC_DER PARENTESISC_IZQ expresion PARENTESISC_DER WHEND PUNTOCOMA
Rule 74    for -> FOR ID PARENTESIS_IZQ NUMERO TO NUMERO PARENTESIS_DER LOOP PARENTESISC_IZQ expresion PARENTESISC_DER END LOOP PUNTOCOMA
Rule 75    repeat -> REPEAT PARENTESISC_IZQ expresion PARENTESISC_DER UNTIL PARENTESISC_IZQ condicionales PARENTESISC_DER
Rule 76    case -> CASE ID when END CASE PUNTOCOMA
Rule 77    case -> CASE ID when else END CASE PUNTOCOMA
Rule 78    when -> WHEN NUMERO THEN PARENTESISC_IZQ expresion PARENTESISC_DER
Rule 79    when -> WHEN BOOL THEN PARENTESISC_IZQ expresion PARENTESISC_DER
Rule 80    else -> ELSE PARENTESISC_IZQ expresion PARENTESISC_DER
Rule 81    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 40
AND                  : 46
BEGINNING            : 70
BOOL                 : 19 23 79
CASE                 : 76 76 77 77
COMA                 : 35 37 40 41 42 43 44 46 47 48 49 50 64 71
CONTINUEDOWN         : 61
CONTINUELEFT         : 63
CONTINUERIGHT        : 62
CONTINUEUP           : 60
DEF                  : 35
DIV                  : 41
DOWN                 : 69
ELSE                 : 80
END                  : 39 74 76 77
EQUAL                : 50
FOR                  : 74
GREATER              : 48
ID                   : 17 21 27 31 35 36 39 40 71 74 76 77
LOOP                 : 74 74
MULT                 : 42
NUMERO               : 18 22 28 32 74 74 78
OR                   : 47
PARENTESISC_DER      : 39 73 73 74 75 75 78 79 80
PARENTESISC_IZQ      : 39 73 73 74 75 75 78 79 80
PARENTESIS_DER       : 35 36 39 40 41 42 43 44 46 47 48 49 50 64 71 72 74
PARENTESIS_IZQ       : 35 36 39 40 41 42 43 44 46 47 48 49 50 64 71 72 74
POS                  : 64
POSX                 : 65
POSY                 : 66
PROC                 : 39
PUNTOCOMA            : 35 36 39 39 40 41 42 43 44 46 47 48 49 50 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 76 77
PUT                  : 71
RANDOM               : 72
REPEAT               : 75
SMALLER              : 49
SUBSTR               : 44
SUM                  : 43
THEN                 : 78 79
TO                   : 74
UNTIL                : 75
UP                   : 68
USECOLOR             : 67
WHEN                 : 78 79
WHEND                : 73
WHILE                : 73
error                : 

Nonterminals, with rules where they appear

aritmeticas          : 10 24 29
beginning            : 59
bloq_ejecucion       : 
case                 : 
condicionales        : 13 33 73 75
continueDown         : 52
continueLeft         : 54
continueRight        : 53
continueUp           : 51
def_variable         : 7
elevation            : 58
else                 : 77
empty                : 16 20 26 30 34
expresion            : 7 8 9 10 11 12 13 14 15 39 43 73 74 75 78 79 80
expresion_log        : 46 46 47 47
expresion_op         : 40 41 41 42 42 43 44 44 48 48 49 49 50 50 60 61 62 63 64 64 65 66 67 72
expresion_param      : 37 38 71
expresion_var        : 35
for                  : 14
funcion              : 5
llamada_funcion      : 9
logicas              : 11 25
movimiento           : 12
parametros           : 36 37 39
pos                  : 55
posAxis              : 56
proc_compuesto       : 1
procedimiento        : 3 4
programa             : 0
put                  : 8
random               : 45
repeat               : 
set_proc             : 2 3
useColor             : 57
when                 : 76 77
while                : 6 15

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . proc_compuesto
    (2) proc_compuesto -> . set_proc
    (3) set_proc -> . procedimiento set_proc
    (4) set_proc -> . procedimiento
    (5) procedimiento -> . funcion
    (39) funcion -> . PROC ID PARENTESIS_IZQ parametros PARENTESIS_DER PARENTESISC_IZQ expresion PARENTESISC_DER PUNTOCOMA END PUNTOCOMA

    PROC            shift and go to state 6

    programa                       shift and go to state 1
    proc_compuesto                 shift and go to state 2
    set_proc                       shift and go to state 3
    procedimiento                  shift and go to state 4
    funcion                        shift and go to state 5

state 1

    (0) S' -> programa .



state 2

    (1) programa -> proc_compuesto .

    $end            reduce using rule 1 (programa -> proc_compuesto .)


state 3

    (2) proc_compuesto -> set_proc .

    $end            reduce using rule 2 (proc_compuesto -> set_proc .)


state 4

    (3) set_proc -> procedimiento . set_proc
    (4) set_proc -> procedimiento .
    (3) set_proc -> . procedimiento set_proc
    (4) set_proc -> . procedimiento
    (5) procedimiento -> . funcion
    (39) funcion -> . PROC ID PARENTESIS_IZQ parametros PARENTESIS_DER PARENTESISC_IZQ expresion PARENTESISC_DER PUNTOCOMA END PUNTOCOMA

    $end            reduce using rule 4 (set_proc -> procedimiento .)
    PROC            shift and go to state 6

    procedimiento                  shift and go to state 4
    set_proc                       shift and go to state 7
    funcion                        shift and go to state 5

state 5

    (5) procedimiento -> funcion .

    PROC            reduce using rule 5 (procedimiento -> funcion .)
    $end            reduce using rule 5 (procedimiento -> funcion .)


state 6

    (39) funcion -> PROC . ID PARENTESIS_IZQ parametros PARENTESIS_DER PARENTESISC_IZQ expresion PARENTESISC_DER PUNTOCOMA END PUNTOCOMA

    ID              shift and go to state 8


state 7

    (3) set_proc -> procedimiento set_proc .

    $end            reduce using rule 3 (set_proc -> procedimiento set_proc .)


state 8

    (39) funcion -> PROC ID . PARENTESIS_IZQ parametros PARENTESIS_DER PARENTESISC_IZQ expresion PARENTESISC_DER PUNTOCOMA END PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 9


state 9

    (39) funcion -> PROC ID PARENTESIS_IZQ . parametros PARENTESIS_DER PARENTESISC_IZQ expresion PARENTESISC_DER PUNTOCOMA END PUNTOCOMA
    (37) parametros -> . expresion_param COMA parametros
    (38) parametros -> . expresion_param
    (21) expresion_param -> . ID
    (22) expresion_param -> . NUMERO
    (23) expresion_param -> . BOOL
    (24) expresion_param -> . aritmeticas
    (25) expresion_param -> . logicas
    (26) expresion_param -> . empty
    (40) aritmeticas -> . ADD PARENTESIS_IZQ ID COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (41) aritmeticas -> . DIV PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (42) aritmeticas -> . MULT PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (43) aritmeticas -> . SUM PARENTESIS_IZQ expresion_op COMA expresion PARENTESIS_DER PUNTOCOMA
    (44) aritmeticas -> . SUBSTR PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (45) aritmeticas -> . random
    (46) logicas -> . AND PARENTESIS_IZQ expresion_log COMA expresion_log PARENTESIS_DER PUNTOCOMA
    (47) logicas -> . OR PARENTESIS_IZQ expresion_log COMA expresion_log PARENTESIS_DER PUNTOCOMA
    (81) empty -> .
    (72) random -> . RANDOM PARENTESIS_IZQ expresion_op PARENTESIS_DER PUNTOCOMA

    ID              shift and go to state 10
    NUMERO          shift and go to state 13
    BOOL            shift and go to state 14
    ADD             shift and go to state 18
    DIV             shift and go to state 19
    MULT            shift and go to state 20
    SUM             shift and go to state 21
    SUBSTR          shift and go to state 22
    AND             shift and go to state 24
    OR              shift and go to state 25
    COMA            reduce using rule 81 (empty -> .)
    PARENTESIS_DER  reduce using rule 81 (empty -> .)
    RANDOM          shift and go to state 26

    parametros                     shift and go to state 11
    expresion_param                shift and go to state 12
    aritmeticas                    shift and go to state 15
    logicas                        shift and go to state 16
    empty                          shift and go to state 17
    random                         shift and go to state 23

state 10

    (21) expresion_param -> ID .

    COMA            reduce using rule 21 (expresion_param -> ID .)
    PARENTESIS_DER  reduce using rule 21 (expresion_param -> ID .)


state 11

    (39) funcion -> PROC ID PARENTESIS_IZQ parametros . PARENTESIS_DER PARENTESISC_IZQ expresion PARENTESISC_DER PUNTOCOMA END PUNTOCOMA

    PARENTESIS_DER  shift and go to state 27


state 12

    (37) parametros -> expresion_param . COMA parametros
    (38) parametros -> expresion_param .

    COMA            shift and go to state 28
    PARENTESIS_DER  reduce using rule 38 (parametros -> expresion_param .)


state 13

    (22) expresion_param -> NUMERO .

    COMA            reduce using rule 22 (expresion_param -> NUMERO .)
    PARENTESIS_DER  reduce using rule 22 (expresion_param -> NUMERO .)


state 14

    (23) expresion_param -> BOOL .

    COMA            reduce using rule 23 (expresion_param -> BOOL .)
    PARENTESIS_DER  reduce using rule 23 (expresion_param -> BOOL .)


state 15

    (24) expresion_param -> aritmeticas .

    COMA            reduce using rule 24 (expresion_param -> aritmeticas .)
    PARENTESIS_DER  reduce using rule 24 (expresion_param -> aritmeticas .)


state 16

    (25) expresion_param -> logicas .

    COMA            reduce using rule 25 (expresion_param -> logicas .)
    PARENTESIS_DER  reduce using rule 25 (expresion_param -> logicas .)


state 17

    (26) expresion_param -> empty .

    COMA            reduce using rule 26 (expresion_param -> empty .)
    PARENTESIS_DER  reduce using rule 26 (expresion_param -> empty .)


state 18

    (40) aritmeticas -> ADD . PARENTESIS_IZQ ID COMA expresion_op PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 29


state 19

    (41) aritmeticas -> DIV . PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 30


state 20

    (42) aritmeticas -> MULT . PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 31


state 21

    (43) aritmeticas -> SUM . PARENTESIS_IZQ expresion_op COMA expresion PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 32


state 22

    (44) aritmeticas -> SUBSTR . PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 33


state 23

    (45) aritmeticas -> random .

    COMA            reduce using rule 45 (aritmeticas -> random .)
    PARENTESIS_DER  reduce using rule 45 (aritmeticas -> random .)
    DEF             reduce using rule 45 (aritmeticas -> random .)
    PUT             reduce using rule 45 (aritmeticas -> random .)
    ID              reduce using rule 45 (aritmeticas -> random .)
    ADD             reduce using rule 45 (aritmeticas -> random .)
    DIV             reduce using rule 45 (aritmeticas -> random .)
    MULT            reduce using rule 45 (aritmeticas -> random .)
    SUM             reduce using rule 45 (aritmeticas -> random .)
    SUBSTR          reduce using rule 45 (aritmeticas -> random .)
    AND             reduce using rule 45 (aritmeticas -> random .)
    OR              reduce using rule 45 (aritmeticas -> random .)
    GREATER         reduce using rule 45 (aritmeticas -> random .)
    SMALLER         reduce using rule 45 (aritmeticas -> random .)
    EQUAL           reduce using rule 45 (aritmeticas -> random .)
    FOR             reduce using rule 45 (aritmeticas -> random .)
    WHILE           reduce using rule 45 (aritmeticas -> random .)
    RANDOM          reduce using rule 45 (aritmeticas -> random .)
    CONTINUEUP      reduce using rule 45 (aritmeticas -> random .)
    CONTINUEDOWN    reduce using rule 45 (aritmeticas -> random .)
    CONTINUERIGHT   reduce using rule 45 (aritmeticas -> random .)
    CONTINUELEFT    reduce using rule 45 (aritmeticas -> random .)
    POS             reduce using rule 45 (aritmeticas -> random .)
    POSX            reduce using rule 45 (aritmeticas -> random .)
    POSY            reduce using rule 45 (aritmeticas -> random .)
    USECOLOR        reduce using rule 45 (aritmeticas -> random .)
    UP              reduce using rule 45 (aritmeticas -> random .)
    DOWN            reduce using rule 45 (aritmeticas -> random .)
    BEGINNING       reduce using rule 45 (aritmeticas -> random .)
    PARENTESISC_DER reduce using rule 45 (aritmeticas -> random .)
    PUNTOCOMA       reduce using rule 45 (aritmeticas -> random .)


state 24

    (46) logicas -> AND . PARENTESIS_IZQ expresion_log COMA expresion_log PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 34


state 25

    (47) logicas -> OR . PARENTESIS_IZQ expresion_log COMA expresion_log PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 35


state 26

    (72) random -> RANDOM . PARENTESIS_IZQ expresion_op PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 36


state 27

    (39) funcion -> PROC ID PARENTESIS_IZQ parametros PARENTESIS_DER . PARENTESISC_IZQ expresion PARENTESISC_DER PUNTOCOMA END PUNTOCOMA

    PARENTESISC_IZQ shift and go to state 37


state 28

    (37) parametros -> expresion_param COMA . parametros
    (37) parametros -> . expresion_param COMA parametros
    (38) parametros -> . expresion_param
    (21) expresion_param -> . ID
    (22) expresion_param -> . NUMERO
    (23) expresion_param -> . BOOL
    (24) expresion_param -> . aritmeticas
    (25) expresion_param -> . logicas
    (26) expresion_param -> . empty
    (40) aritmeticas -> . ADD PARENTESIS_IZQ ID COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (41) aritmeticas -> . DIV PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (42) aritmeticas -> . MULT PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (43) aritmeticas -> . SUM PARENTESIS_IZQ expresion_op COMA expresion PARENTESIS_DER PUNTOCOMA
    (44) aritmeticas -> . SUBSTR PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (45) aritmeticas -> . random
    (46) logicas -> . AND PARENTESIS_IZQ expresion_log COMA expresion_log PARENTESIS_DER PUNTOCOMA
    (47) logicas -> . OR PARENTESIS_IZQ expresion_log COMA expresion_log PARENTESIS_DER PUNTOCOMA
    (81) empty -> .
    (72) random -> . RANDOM PARENTESIS_IZQ expresion_op PARENTESIS_DER PUNTOCOMA

    ID              shift and go to state 10
    NUMERO          shift and go to state 13
    BOOL            shift and go to state 14
    ADD             shift and go to state 18
    DIV             shift and go to state 19
    MULT            shift and go to state 20
    SUM             shift and go to state 21
    SUBSTR          shift and go to state 22
    AND             shift and go to state 24
    OR              shift and go to state 25
    COMA            reduce using rule 81 (empty -> .)
    PARENTESIS_DER  reduce using rule 81 (empty -> .)
    RANDOM          shift and go to state 26

    expresion_param                shift and go to state 12
    parametros                     shift and go to state 38
    aritmeticas                    shift and go to state 15
    logicas                        shift and go to state 16
    empty                          shift and go to state 17
    random                         shift and go to state 23

state 29

    (40) aritmeticas -> ADD PARENTESIS_IZQ . ID COMA expresion_op PARENTESIS_DER PUNTOCOMA

    ID              shift and go to state 39


state 30

    (41) aritmeticas -> DIV PARENTESIS_IZQ . expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (27) expresion_op -> . ID
    (28) expresion_op -> . NUMERO
    (29) expresion_op -> . aritmeticas
    (30) expresion_op -> . empty
    (40) aritmeticas -> . ADD PARENTESIS_IZQ ID COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (41) aritmeticas -> . DIV PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (42) aritmeticas -> . MULT PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (43) aritmeticas -> . SUM PARENTESIS_IZQ expresion_op COMA expresion PARENTESIS_DER PUNTOCOMA
    (44) aritmeticas -> . SUBSTR PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (45) aritmeticas -> . random
    (81) empty -> .
    (72) random -> . RANDOM PARENTESIS_IZQ expresion_op PARENTESIS_DER PUNTOCOMA

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    ADD             shift and go to state 18
    DIV             shift and go to state 19
    MULT            shift and go to state 20
    SUM             shift and go to state 21
    SUBSTR          shift and go to state 22
    COMA            reduce using rule 81 (empty -> .)
    RANDOM          shift and go to state 26

    expresion_op                   shift and go to state 40
    aritmeticas                    shift and go to state 43
    empty                          shift and go to state 44
    random                         shift and go to state 23

state 31

    (42) aritmeticas -> MULT PARENTESIS_IZQ . expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (27) expresion_op -> . ID
    (28) expresion_op -> . NUMERO
    (29) expresion_op -> . aritmeticas
    (30) expresion_op -> . empty
    (40) aritmeticas -> . ADD PARENTESIS_IZQ ID COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (41) aritmeticas -> . DIV PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (42) aritmeticas -> . MULT PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (43) aritmeticas -> . SUM PARENTESIS_IZQ expresion_op COMA expresion PARENTESIS_DER PUNTOCOMA
    (44) aritmeticas -> . SUBSTR PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (45) aritmeticas -> . random
    (81) empty -> .
    (72) random -> . RANDOM PARENTESIS_IZQ expresion_op PARENTESIS_DER PUNTOCOMA

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    ADD             shift and go to state 18
    DIV             shift and go to state 19
    MULT            shift and go to state 20
    SUM             shift and go to state 21
    SUBSTR          shift and go to state 22
    COMA            reduce using rule 81 (empty -> .)
    RANDOM          shift and go to state 26

    expresion_op                   shift and go to state 45
    aritmeticas                    shift and go to state 43
    empty                          shift and go to state 44
    random                         shift and go to state 23

state 32

    (43) aritmeticas -> SUM PARENTESIS_IZQ . expresion_op COMA expresion PARENTESIS_DER PUNTOCOMA
    (27) expresion_op -> . ID
    (28) expresion_op -> . NUMERO
    (29) expresion_op -> . aritmeticas
    (30) expresion_op -> . empty
    (40) aritmeticas -> . ADD PARENTESIS_IZQ ID COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (41) aritmeticas -> . DIV PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (42) aritmeticas -> . MULT PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (43) aritmeticas -> . SUM PARENTESIS_IZQ expresion_op COMA expresion PARENTESIS_DER PUNTOCOMA
    (44) aritmeticas -> . SUBSTR PARENTESIS_IZQ expresion_op COMA expresion_op PARENTESIS_DER PUNTOCOMA
    (45) aritmeticas -> . random
    (81) empty -> .
    (72) random -> . RANDOM PARENTESIS_IZQ expresion_op PARENTESIS_DER PUNTOCOMA
